--- a/src/index.html
+++ b/src/index.html
@@ -32,8 +32,12 @@
                 <li>内容2</li>
             </ul>
         </section>
-        <section id="app3"></section>
-        <section id="app4"></section>
+        <section id="app3">
+            <div class="square"></div>
+        </section>
+        <section id="app4">
+            <div class="circle"></div>
+        </section>
     </div>
 
     <script src="main.js"></script>
